# cpp_task2

./: CLI.cpp  CLI.h  CMakeLists.txt  Namespace.cpp  Namespace.h  Root.cpp  Root.h  main.cpp
classes/: MyClass.cpp  MyClass.h  MyClassForPoly.cpp  MyClassForPoly.h  MyInterface.cpp  MyInterface.h
